Implemented Dijkstra algorithm for calculating shortest way

--- a/main/main/main.csproj
+++ b/main/main/main.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Ant.cs" />
+    <Compile Include="Dijkstra.cs" />
     <Compile Include="GraphGen.cs" />
     <Compile Include="Path.cs" />
     <Compile Include="Program.cs" />
